# trading-analysis

./: .dockerignore  .gitignore  .mcp.json  CHANGES_report_generation.md  README.md  README_ZH.md  analyse_hedging.py  auditing_tasks.txt  build_docker.sh  combine_auditing_results.py  dotenv.example  main.py  print_tree.py  pyproject.toml  requirements.txt  run_docker.sh  tree_output.txt  upsert_report.sh
.claude/: settings.json  settings.local.json
_tmp_trading/: .gitignore
_tmp_trading/trading/: SKILL.md
claude-agent-trading/: .env.example  requirements.txt  run_benchmark.py  test_key.py
claude-agent-trading/claude_agent_trading/: __init__.py  __main__.py  benchmark_cli.py  core.py  trading_daily.py
claude-agent-trading/tests/: test_benchmark.py
claude_agent_trading/: __init__.py  auditing.txt  auditing_runner.py  benchmark.py  benchmark_cli.py  core.py  hedging_daily.py  providers.py  report_generation_daily.py  report_generation_weekly.py  trading_daily.py
claude_proxy/: proxy.py
docker/: Dockerfile  entrypoint.sh
io/: trading_TSLA_claude-sonnet-4-7.json
openclaw/: README.md  openclaw.config.example.yaml
openclaw/skills/: skill.auditing.yaml  (+5 more)
pair_trading/: SKILL.md
reporting/: SKILL.md
resource_allocation/: SKILL.md
resource_reallocation/: SKILL.md
scripts/: _stream_format.py  openclaw_run.py
src/: _common.py  auditing_pipeline.py  hedging_pipeline.py  report_evaluation_pipeline.py  report_generation_pipeline.py  trading_pipeline.py
tests/: test_benchmark.py  test_report_generation_daily.py  test_trading_daily.py
trading/: SKILL.md
(+69 files in other folders)
